# Soar-ing-High

./: README.md
project3/: CMakeLists.txt  ListOfCommands.txt  package.xml
project3/doc/: manifest.yaml
project3/doc/html/: annotated.html  classPathContainer-members.html  classPathContainer.html  classes.html  classexplore_1_1Costmap2DClient-members.html  classexplore_1_1Costmap2DClient.html  classexplore_1_1Explore-members.html  classexplore_1_1Explore.html  classfrontier__exploration_1_1FrontierSearch-members.html  classfrontier__exploration_1_1FrontierSearch.html  costmap__client_8cpp.html  costmap__client_8cpp__incl.map  costmap__client_8cpp__incl.md5  costmap__client_8cpp_source.html  costmap__client_8h.html  costmap__client_8h__dep__incl.map  costmap__client_8h__dep__incl.md5  costmap__client_8h__incl.map  costmap__client_8h__incl.md5  costmap__client_8h_source.html  costmap__tools_8h.html  costmap__tools_8h__dep__incl.map  costmap__tools_8h__dep__incl.md5  costmap__tools_8h__incl.map  costmap__tools_8h__incl.md5  costmap__tools_8h_source.html  dir_000000_000001.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  (+45 more)
project3/launch/: explore.launch  launch_mapped_maze.launch  myfile.launch  rand.sh  rand_Y.sh  simple_goal.sh  start_project3.sh  test.sh
project3/maps/: Maze.world
project3/param/: costmap_common_params_burger.yaml  dwa_local_planner_params_burger.yaml
project3/rviz/: rvizsettings.rviz
project3/src/: explore.cpp  frontier_search.cpp  rand.sh
(+2 files in other folders)
