<?xml version="1.0"?>
<package format="2">
  <name>project3</name>
  <version>2.1.1</version>

  <description>Turtlebot autonomous mapping of labyrinth. Based on explore_lite.</description>

  <author email="mr19m015@technikum-wien.at">Stefan Haberl, Julian Katzenschwanz, Cajetan Koschat, Stephanie Kump</author>
  <maintainer email="mr19m015@technikum-wien.at">none</maintainer>
  <license>BSD</license>
  <url>http://wiki.ros.org/explore_lite</url>

  <!-- acknowledgements
  <author>Charles DuHadway</author>
  <url>http://ros.org/wiki/explore</url>
  <author>Paul Bovbel</author>
  <url>https://github.com/paulbovbel/frontier_exploration</url>
  <author>Jiri Horner</author>
  <url>http://wiki.ros.org/explore_lite</url>
  -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>map_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>tf</depend>
  <depend>costmap_2d</depend>
  <depend>actionlib</depend>

  <test_depend>roslaunch</test_depend>
</package>
